--- a/Resources.resx
+++ b/Resources.resx
@@ -39,4 +39,13 @@
   <data name="NotificationMessage" xml:space="preserve">
     <value>The mouse was blocked from entering the selected screen.</value>
   </data>
+  <data name="SingleMonitorWarningTitle" xml:space="preserve">
+    <value>Multiple Monitors Required</value>
+  </data>
+  <data name="SingleMonitorWarningMessage" xml:space="preserve">
+    <value>Mouse Guard requires at least 2 monitors to function properly. Currently only 1 monitor is detected.\n\nThe application will run in the system tray but blocking functionality is disabled until a second monitor is connected.</value>
+  </data>
+  <data name="SingleMonitorModeMenuLabel" xml:space="preserve">
+    <value>Single monitor detected - blocking disabled</value>
+  </data>
 </root>
