--- a/Resources.de.resx
+++ b/Resources.de.resx
@@ -31,7 +31,8 @@
     <value>Tastenkombination wählen</value>
   </data>
   <data name="HotkeyDialogPrompt" xml:space="preserve">
-    <value>Neue Tastenkombination drücken (Esc=Abbrechen, Enter=OK):\n{0}</value>
+    <value>Neue Tastenkombination drücken (Esc=Abbrechen, Enter=OK):
+{0}</value>
   </data>
   <data name="NotificationTitle" xml:space="preserve">
     <value>Maus blockiert</value>
@@ -43,7 +44,9 @@
     <value>Mehrere Monitore erforderlich</value>
   </data>
   <data name="SingleMonitorWarningMessage" xml:space="preserve">
-    <value>Mouse Guard benötigt mindestens 2 Monitore, um ordnungsgemäß zu funktionieren. Derzeit ist nur 1 Monitor erkannt.\n\nDie Anwendung wird in der Taskleiste ausgeführt, aber die Sperrfunktion ist deaktiviert, bis ein zweiter Monitor angeschlossen ist.</value>
+    <value>Mouse Guard benötigt mindestens 2 Monitore, um ordnungsgemäß zu funktionieren. Derzeit ist nur 1 Monitor erkannt.
+
+Die Anwendung wird in der Taskleiste ausgeführt, aber die Sperrfunktion ist deaktiviert, bis ein zweiter Monitor angeschlossen ist.</value>
   </data>
   <data name="SingleMonitorModeMenuLabel" xml:space="preserve">
     <value>Ein Monitor erkannt - Sperrung deaktiviert</value>
